--- a/src/app/perfil-meninos/perfil-meninos.page.html
+++ b/src/app/perfil-meninos/perfil-meninos.page.html
@@ -12,7 +12,7 @@
 <ion-content>
   <ion-content>
     <div class="centro">
-      <img class="conteudo" [src]="item.foto" (click)="cam()">
+      <img class="conteudo" src="../../assets/a.jpg" (click)="cam()">
     </div>
 
     <ion-card>
