--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -14,4 +14,32 @@
 
 .btn-login {
   --border-radius: 100px;
+
 }
+
+.centro {
+  margin: auto;
+  background-color: rgba(0, 0, 0, 0);
+  height: 130px;
+  width: 100%;
+  display: flex;
+}
+.conteudo {
+  
+  height: 120px;
+  width: 120px;
+  margin: auto;
+}
+
+
+
+img {
+  width: 80px;
+  height: 100px;
+}
+
+#container{
+  text-align: center;
+  position: relative;
+  top: 20%;
+  }
