--- a/src/app/pedidos/pedidos.page.html
+++ b/src/app/pedidos/pedidos.page.html
@@ -1,83 +1,82 @@
 <ion-header>
-  <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
-    <ion-buttons slot="end">
-      <ion-button (click)="dismiss()">
-        <ion-icon slot="icon-only" name="close"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title class=ion-text-left>{{tipo.nome}}</ion-title>
+    <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
+        <ion-buttons slot="end">
+            <ion-button (click)="dismiss()">
+                <ion-icon slot="icon-only" name="close"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+        <ion-title class=ion-text-left>{{tipo.nome}}</ion-title>
 
-  </ion-toolbar>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card *ngFor="let pedido of lista | async">
-    <div *ngIf="tipo.id == 'fardamentos'">
-      <ion-card-content>
-        <ion-label>
-          <b>Quantidade:</b> {{pedido.quantidade}}
-          <br>
-          <b>Tamanho:</b> {{pedido.tamanho}}
-        </ion-label>
-      </ion-card-content>
+    <ion-card *ngFor="let pedido of lista | async">
+        <div *ngIf="tipo.id == 'fardamentos'">
+            <ion-card-content>
+                <ion-label>
+                    <b>Quantidade:</b> {{pedido.quantidade}}
+                    <br>
+                    <b>Tamanho:</b> {{pedido.tamanho}}
+                </ion-label>
+            </ion-card-content>
 
-      <ion-card-content>
-        <ion-label>
-          <b>Pedinte:</b>
-        </ion-label>
+            <ion-card-content>
+                <ion-label>
+                    <b>Pedinte:</b>
+                </ion-label>
 
-        <p>{{pedido.pai}}</p>
-      </ion-card-content>
-    </div>
-
-
-    <div *ngIf="tipo.id == 'modulos'">
-      <ion-card-content>
-        <ion-label>
-          <b>Modulo:</b> {{pedido.modulos}}
-          <br>
-          <b>Quantidade:</b> {{pedido.quantidade}}
-        </ion-label>
-      </ion-card-content>
-
-      <ion-card-content>
-        <ion-label>
-          <b>Pedinte:</b>
-        </ion-label>
-
-        <p>{{pedido.pai}}</p>
-      </ion-card-content>
-    </div>
+                <p>{{pedido.pai}}</p>
+            </ion-card-content>
+        </div>
 
 
+        <div *ngIf="tipo.id == 'modulos'">
+            <ion-card-content>
+                <ion-label>
+                    <b>Modulo:</b> {{pedido.modulos}}
+                    <br>
+                    <b>Quantidade:</b> {{pedido.quantidade}}
+                </ion-label>
+            </ion-card-content>
 
-    <div *ngIf="tipo.id == 'reunioes'">
-      <ion-card-content>
-        <h2><b>{{pedido.motivo}}</b></h2>
-      </ion-card-content>
+            <ion-card-content>
+                <ion-label>
+                    <b>Pedinte:</b>
+                </ion-label>
 
-      <ion-card-content>
-        <ion-label><b>
+                <p>{{pedido.pai}}</p>
+            </ion-card-content>
+        </div>
+
+
+
+        <div *ngIf="tipo.id == 'reunioes'">
+            <ion-card-content>
+                <h2><b>{{pedido.motivo}}</b></h2>
+            </ion-card-content>
+
+            <ion-card-content>
+                <ion-label><b>
             Detalhes:</b>
-        </ion-label>
-        <h4> {{pedido.detalhes}}</h4>
-      </ion-card-content>
+                </ion-label>
+                <h4> {{pedido.detalhes}}</h4>
+            </ion-card-content>
 
-      <ion-card-content>
-        <ion-label><b>
+            <ion-card-content>
+                <ion-label><b>
             Limites de Horários:</b>
-        </ion-label>
-        <p>{{pedido.limData}}</p>
-        <p>{{pedido.limHorario}}</p>
-      </ion-card-content>
+                </ion-label>
+                <p>{{pedido.limData}}</p>
+                <p>{{pedido.limHorario}}</p>
+            </ion-card-content>
 
-      <ion-card-content>
-        <ion-label><b>Pedinte:</b></ion-label>
-        <p>{{pedido.pai}}</p>
-      </ion-card-content>
-    </div>
-
-  </div>
+            <ion-card-content>
+                <ion-label><b>Pedinte:</b></ion-label>
+                <p>{{pedido.pai}}</p>
+            </ion-card-content>
+        </div>
+    </ion-card>
 
 
 </ion-content>
